# simple_calculator_package

./: LICENSE.txt  README.md  pyproject.toml
.github/workflows/: test.yml
src/simple_calculator_LM099/: calculator.py
tests/: test_calulator.py
