[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "simple_calculator_LM099"
version = "0.0.2"
authors = [
  { name="Letizia Marchesi", email="l.marchesi19@campus.unimib.it" },
]
description = "Una semplice libreria calcolatrice per Python"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]